---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-05-04
  Changes:
    - SIGNIFICANT CHANGE: There are now 4 tiers rather than 5. Five was proving just too much chaos in playtesting. Funky has been removed. Existing saves are ported by replacing all Funky items with the tier below (defective).
    - Russian localization added.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2025-05-03
  Changes:
    - Fixed a crash when throwing a Broken capsule.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-05-03
  Bugfixes:
    - Fixed that the stunning effect of Normal worm spit was buffed.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-05-02
  Changes:
    - Removed '+100%' from degradation tooltips to pre-empt the fix on experimental.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-05-02
  Balancing:
    - Meltdown facilities require more steel to craft (10 -> 30).
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-05-02
  Changes:
    - Support for downgrading or meltdown of guns, ammo, capsules, modules, repair packs.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-05-02
  Changes:
    - Fixed a startup crash.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-05-02
  Changes: