@@ -9,9 +9,9 @@ data:extend({
 		next_probability = 0.1,
 		subgroup = "qualities",
 		icon = "__Inverted-Quality__/graphics/icons/2.png",
-		beacon_power_usage_multiplier = 1,
-		mining_drill_resource_drain_multiplier = 1,
-		science_pack_drain_multiplier = 1,
+		beacon_power_usage_multiplier = 1 + 1 / 6,
+		mining_drill_resource_drain_multiplier = 1 + 1 / 6,
+		science_pack_drain_multiplier = 1 + 1 / 100,
 	},
 	{
 		type = "quality",
@@ -23,9 +23,9 @@ data:extend({
 		next_probability = 0.1,
 		subgroup = "qualities",
 		icon = "__Inverted-Quality__/graphics/icons/3.png",
-		beacon_power_usage_multiplier = 1,
-		mining_drill_resource_drain_multiplier = 1,
-		science_pack_drain_multiplier = 1,
+		beacon_power_usage_multiplier = 1 + 3 / 6,
+		mining_drill_resource_drain_multiplier = 1 + 3 / 6,
+		science_pack_drain_multiplier = 1 + 3 / 100,
 	},
 	{
 		type = "quality",
@@ -35,8 +35,8 @@ data:extend({
 		order = "e",
 		subgroup = "qualities",
 		icon = "__Inverted-Quality__/graphics/icons/4.png",
-		beacon_power_usage_multiplier = 1,
-		mining_drill_resource_drain_multiplier = 1,
-		science_pack_drain_multiplier = 1,
+		beacon_power_usage_multiplier = 1 + 5 / 6,
+		mining_drill_resource_drain_multiplier = 1 + 5 / 6,
+		science_pack_drain_multiplier = 1 + 5 / 100,
 	},
 })
