@@ -2,6 +2,7 @@
 Version: 1.1.1
 Date: ????
   Changes:
+    - Beacons, mining drills and labs now respect quality just like the rest of the game.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025-05-04
